c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_member_operators/nested_arrow_pointer_to_non_struct.c
struct s {
    long l;
};

struct has_ptr {
    double *ptr;
};

int main(void) {
    double d = 0.0;
    struct has_ptr p_struct = { &d };
    return p_struct.ptr->l;  // can't apply -> operator to pointer to non-struct
}